.config/waybar/style.css
/*Main Bar*/

* {
  border: none;
  border-radius: 0;
  font-family: JetBrainsMono Nerd Font propo;
  color: #c5c9c5;
  font-size: 14px;
  min-height: 0;
  font-weight: bold;
}

#window {
  padding: 0px 10px 0px 10px;
  transition: none;
}

window#waybar {
  background: transparent;
}

window#waybar.hidden {
  opacity: 0.2;
}

/*Workspaces*/

#workspaces {
  transition: none;
}

#workspaces button {
  border: none;
  box-shadow: inset 0 -3px transparent;
  padding: 0px 0px;
}

#workspaces button.active {
  border-bottom: 3px solid #ff5148;
}

#workspaces button.focused {
  background-color: #484848;
}

/*Tooltip*/

tooltip label {
  padding-right: 5px;
  padding-left: 5px;
  padding-top: 2px;
  padding-bottom: 2px;
  border-radius: 3px;
}

/* Modules */
.modules-right {
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 2px;
  padding-bottom: 2px;
  margin: 3px 2px;
  border-radius: 4px;
  /* background: #181616; */
  background: #000000;
}

.modules-left {
  padding-left: 5px;
  padding-right: 5px;
  padding-top: 2px;
  padding-bottom: 2px;
  margin: 3px 2px;
  border-radius: 4px;
  /* background: #181616; */
  background: #000000;
}

#backlight {
  padding: 5px 4px;
}

#pulseaudio {
  padding: 5px 4px;
}

#pulseaudio.output.muted {
  color: yellow;
}

#pulseaudio.input.source-muted {
  color: yellow;
}

#network {
  padding-left: 1px;
  padding-right: 1px;
  padding-top: 2px;
  padding-bottom: 2px;
}

#network.disconnected {
  color: red;
}

#network.disabled{
  color: red;
}

#battery {
  animation-timing-function: linear;
  animation-iteration-count: infinite;
  animation-direction: alternate;
  padding-left: 1px;
  padding-right: 1px;
  padding-top: 2px;
  padding-bottom: 2px;
}

#battery.warning {
  color: yellow;
}

#battery.critical {
  color: red;
}

#battery.warning.discharging {
  animation-name: blink-warning;
  animation-duration: 10s;
}

#battery.critical.discharging {
  animation-name: blink-critical;
  animation-duration: 10s;
}

#clock {
  padding-left: 1px;
  padding-right: 1px;
  padding-top: 2px;
  padding-bottom: 2px;
}

#language {
  padding-left: 1px;
  padding-right: 1px;
  padding-top: 2px;
  padding-bottom: 2px;
}

#idle_inhibitor {
  padding-left: 1px;
  padding-right: 1px;
  padding-top: 2px;
  padding-bottom: 2px;
}

#tray {
  padding-left: 1px;
  padding-right: 1px;
  padding-top: 2px;
  padding-bottom: 2px;
}

